Fixes window split shortcuts

--- a/tmux.conf
+++ b/tmux.conf
@@ -9,5 +9,5 @@ bind k select-pane -U
 bind l select-pane -R
 bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
-bind v split-window
-bind h split-window -h
+bind s split-window
+bind v split-window -h
