--- a/tmux.conf
+++ b/tmux.conf
@@ -11,3 +11,8 @@ bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
 bind s split-window
 bind v split-window -h
+
+bind -n C-h select-pane -L
+bind -n C-j select-pane -D
+bind -n C-k select-pane -U
+bind -n C-l select-pane -R
