--- a/tmux.conf
+++ b/tmux.conf
@@ -12,6 +12,12 @@ bind-key -r C-l select-window -t :+
 bind s split-window
 bind v split-window -h
 
+# resize panes with vim movement keys
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
+
 bind -n C-h select-pane -L
 bind -n C-j select-pane -D
 bind -n C-k select-pane -U
