--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,8 @@
 # improve colors
 set -g default-terminal 'screen-256color'
+unbind C-b
+set -g prefix C-q
+bind C-q send-prefix
 
 # act like vim
 setw -g mode-keys vi
